# llm-shadow-traffic

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
config/: settings.py
eval/: accessors.py  cli.py  config.py  judges.py  matchers.py  report.py  report_models.py  report_renderer.py  report_service.py  runner.py  semantic.py  tool_match.py
examples/: common.py  regex_match_example.py  semantic_match_example.py  tool_call_match_example.py  tool_call_semantic_args_example.py  tool_call_variables_example.py
logger/: schema.py  writer.py
normalizer/: __init__.py  normalize.py
proxy/: cli.py  client.py  handlers.py  main.py  routes.py  service.py
tests/: test_eval_cli.py  test_eval_report.py  test_eval_runner.py  test_examples.py  test_judges.py  test_logger.py  test_normalizer.py  test_proxy.py
utils/: ids.py  timing.py
