[project]
name = "llm-shadow"
version = "0.1.0"
description = "FastAPI shadow proxy for comparing baseline and candidate LLM responses."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.2",
    "uvicorn>=0.32.0",
]

[project.scripts]
llm-shadow-serve = "proxy.cli:main"

[project.optional-dependencies]
analysis = [
    "duckdb>=1.1.3",
]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "config",
    "eval",
    "logger",
    "normalizer",
    "proxy",
    "utils",
]
